@@ -44105,29 +44105,85 @@ Calling conventions
 \end_layout
 
 \begin_layout Standard
-By default, all parameters are passed on the stack, right-to-left.
- 8-bit return values are passed in l, 16-bit values in hl, 32-bit values
- in dehl.
- Except for the GBZ80, where 8-bit values are passed in e, 16-bit values
- in de, 32-bit values in hlde.
+For functions that do not have variable arguments, some parameters are passed
+ in register.
+ The first parameter is passed in a if it has 8 bits.
+ If it has 16 bits it is passed in hl, except for gbz80, where it is passed
+ in de.
+ If it has 32 bits, it is passed in hlde, except for gbz80, where it is
+ passed in debc.
+\end_layout
+
+\begin_layout Standard
+For z80, z180, z80n: if the first parameter is in a or hl, and the second
+ has 16 bits, it is passed in de.
+\end_layout
+
+\begin_layout Standard
+For r2k, r2ka, r3ka, tlcs90, ez80_z80: if the first parametr is in a, and
+ the second has 8 bits, it is passed in l; if the first parameter is in
+ hl or hlde, and the second has 8 bits, it is passed in a; if the first
+ is in a, and the second has 16 bits, it is passed in hl.
+\end_layout
+
+\begin_layout Standard
+For gbz80: if the first parameter is in a, and the second has 8 bits, it
+ is passed in e; if the first is in bc or debc, and the second has 8 bits,
+ it is passed in a; if the first is passed in a, and the second has 16 bits,
+ it is passed in bc; if the first is passed in de, and the second has 16
+ bits, it is passed in bc;
+\end_layout
+
+\begin_layout Standard
+All other parameters are passed on the stack, right-to-left.
+\end_layout
+
+\begin_layout Standard
+8-bit return values are passed in a, 16-bit values in hl (r2k, r2ka, r3ka,
+ tlcs90, ez80_z80), bc (gbz80) or de (others), 32-bit values in debc (gbz80)
+ or (others).
  Larger return values are passed in memory in a location specified by the
  caller through a hidden pointer argument.
 \end_layout
 
 \begin_layout Standard
-There are three other calling conventions supported, which can be specified
- using the keywords __smallc, __z88dk_fastcall (not on GBZ80) and __z88dk_callee.
+The stack is usually adjusted for stack parameters by the caller.
+ For non-gbz80, there are two exceptions: functions that return void, and
+ functions where the return value is float, and there is a first parameter
+ if type float.
+ For gbz80: todo.
+\end_layout
+
+\begin_layout Standard
+There are other calling conventions supported, which can be specified using
+ the keywords __sdccoldcall, __smallc, __z88dk_fastcall (not on GBZ80) and
+ __z88dk_callee.
  They are primarily intended for compatibility with libraries written for
  other compilers.
  For __z88dk_fastcall, there may be only one parameter of at most 32 bits,
- which is passed the same way as the return value.
- For __z88dk_callee, parameters are passed on the stack, but the stack is
- not adjusted for the parameters after the call (thus the callee has to
- do this instead).
+ which is passed is l, hl or dehl.
+ For __z88dk_callee, the stack is not adjusted for the parameters by the
+ caller after the call (thus the callee has to do this instead).
  __z88dk_callee can be combined with __smallc.
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Subsubsection
+Old SDCC calling convention
+\end_layout
+
+\begin_layout Standard
+For compability with functions written for older versions of SDCC, the __oldsdcc
+call calling convention is supported.
+ All parameters are passed on the stack.
+ The stack is not adjusted for the parameters after the call (thus the callee
+ has to do this instead), unless __z88dk_callee is specified.
+ Except for gbz80, 8-bit return values are passed in l, 16-bit values in
+ hl, 32-bit values in dehl.
+ For gbz80, 8-bit values are passed in e, 16-bit values in de, 32-bit values
+ in hlde.
+\end_layout
+
+\begin_layout Subsubsection
 Small-C calling convention
 \end_layout
 
