@@ -152,7 +152,7 @@ static char *stm8_keywords[] = {
   "raisonance",
   "iar",
   "cosmic",
-  "sdccnewcall",
+  "sdccoldcall",
   "z88dk_callee",
   NULL
 };
