@@ -141,6 +141,7 @@ static char *_keywords[] = {
   "_naked",
   "critical",
   "interrupt",
+  "sdccoldcall",
   "z88dk_fastcall",
   "z88dk_callee",
   "smallc",
@@ -157,6 +158,7 @@ static char *_keywordsgb[] = {
   "_naked",
   "critical",
   "interrupt",
+  "sdccoldcall",
   "z88dk_callee",
   "smallc",
   NULL
@@ -169,6 +171,7 @@ static char *_keywordstlcs90[] = {
   "_naked",
   "critical",
   "interrupt",
+  "sdccoldcall",
   "z88dk_fastcall",
   "z88dk_callee",
   "smallc",
